--- a/src/main/resources/it/polimi/ingsw/scenes/BoardScene.fxml
+++ b/src/main/resources/it/polimi/ingsw/scenes/BoardScene.fxml
@@ -391,7 +391,7 @@
 
                 <VBox alignment="CENTER" layoutX="1050.0" prefHeight="100.0" prefWidth="150.0" styleClass="containerPoints" spacing="20">
                     <children>
-                        <Label fx:id="labelTurn" text="it's .....'s turn !" />
+                        <Label fx:id="labelTurn" />
                         <Button fx:id="buttonSide" text="view back side" styleClass="game_button" onAction="#setSide"/>
                     </children>
                 </VBox>
