--- a/src/main/resources/it/polimi/ingsw/boardStyle.css
+++ b/src/main/resources/it/polimi/ingsw/boardStyle.css
@@ -29,6 +29,16 @@
     -fx-border-opacity: 0.8;
     -fx-cursor: hand;
 }
+.buttonCardSelected{
+    .buttonCard{
+        -fx-border-color: #52e51f;
+        -fx-effect: dropshadow(one-pass-box,  #338f13, 20, 0.8, 0, 0);
+        -fx-max-height: 83;
+        -fx-max-width: 120;
+        -fx-min-height: 83;
+        -fx-min-width: 120;
+    }
+}
 
 
 .containerPoints{
