--- a/src/main/resources/it/polimi/ingsw/boardStyle.css
+++ b/src/main/resources/it/polimi/ingsw/boardStyle.css
@@ -15,30 +15,37 @@
 
 
 .buttonCard{
-    -fx-effect: dropshadow(one-pass-box, #4b4401, 6, 1, 0, 0);
-    -fx-max-height: 83;
-    -fx-max-width: 120;
-    -fx-min-height: 83;
-    -fx-min-width: 120;
+    -fx-max-height: 87;
+    -fx-max-width: 124;
+    -fx-min-height: 87;
+    -fx-min-width: 124;
+    -fx-border-color:#4b4401 ;
+    -fx-border-radius: 0 0 0 0;
+    -fx-border-width: 2;
+    -fx-border-opacity: 0.8;
+    -fx-border-style: solid solid solid solid;
+
 }
+
 .buttonCard:hover{
     -fx-opacity: 0.8;
-    -fx-border-color: #125be1;
-    -fx-effect: dropshadow(one-pass-box,  #125be1, 10, 0.8, 0, 0);
-    -fx-border-width: 4;
-    -fx-border-opacity: 0.8;
     -fx-cursor: hand;
 }
+
+
 .buttonCardSelected{
-    .buttonCard{
-        -fx-border-color: #52e51f;
-        -fx-effect: dropshadow(one-pass-box,  #338f13, 20, 0.8, 0, 0);
-        -fx-max-height: 83;
-        -fx-max-width: 120;
-        -fx-min-height: 83;
-        -fx-min-width: 120;
-    }
+    -fx-max-height: 87;
+    -fx-max-width: 124;
+    -fx-min-height: 87;
+    -fx-min-width: 124;
+    -fx-border-color: #52e51f;
+    -fx-border-radius: 0 0 0 0;
+    -fx-border-width: 2;
+    -fx-border-opacity: 0.8;
+    -fx-border-style: solid solid solid solid;
+
 }
+
 
 
 .containerPoints{
