--- a/src/main/resources/it/polimi/ingsw/boardStyle.css
+++ b/src/main/resources/it/polimi/ingsw/boardStyle.css
@@ -217,3 +217,10 @@
     -fx-border-radius: 18 18 0 0;
     -fx-border-color: #3c2414;
 }
+
+.rankLabel{
+    -fx-font-size: 20;
+    -fx-font-weight: bold;
+    -fx-text-fill: #2c1a0f;
+}
+
